# graydiff

./: .dockerignore  .gitignore  Dockerfile  Inverse_Design_Differentiable_Surrogate_Spec.docx  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
models/checkpoints/: surrogate_rollout.pt
notebooks/: 00_solver_and_phase_space_eda.ipynb  01_training_data_generation.ipynb  02_surrogate_architecture.ipynb  03_training.ipynb  04_forward_validation.ipynb  05_inverse_design_ground_truth_recovery.ipynb  05b_inverse_design_handdrawn_and_failures.ipynb  06_onnx_export.ipynb
src/graydiff/: __init__.py  constants.py  data.py  export.py  inverse.py  losses.py  metrics.py  model.py  phase_classify.py  solver.py  target_utils.py  train.py
tests/: conftest.py  test_data.py  test_export.py  test_inverse.py  test_losses.py  test_metrics.py  test_model.py  test_phase_classify.py  test_solver.py  test_target_utils.py  test_train.py
web/: README.md
web/backend/: main.py  model_state.py  schemas.py
web/backend/routers/: forward.py  inverse.py  phase_diagram.py
web/frontend/: app.js  canvas.js  config.js  index.html  phase-diagram.js  style.css
web/frontend/data/: phase_diagram.json  presets.json  surrogate.onnx
